--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,8 @@
 [package]
 name = "quench"
 version = "0.1.0"
+description = "A programming language."
 edition = "2018"
+
+[dependencies]
+structopt = "0.3"
