Add VS Code extension with syntax highlighting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on: push
 jobs:
-  ci:
+  rust:
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
@@ -16,3 +16,17 @@ jobs:
         run: cargo install --path .
       - name: Check output of hello example
         run: examples/hello.qn | git diff --no-index examples/hello.txt -
+  vscode:
+    runs-on: ubuntu-18.04
+    defaults:
+      run:
+        working-directory: editors/code
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v2
+      - name: Install dependencies
+        run: npm install
+      - name: Generate JSON TextMate grammar
+        run: npx js-yaml syntaxes/quench.tmLanguage.yaml
