Use Tree-sitter to provide LSP semantic tokens

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,7 @@ jobs:
         uses: actions/setup-node@v2
       - name: Install dependencies
         run: npm install
-      - name: Generate JSON TextMate grammar
-        run: npx js-yaml syntaxes/quench.tmLanguage.yaml
+      - name: Compile
+        run: npm run compile
+      - name: Lint
+        run: npm run lint
