--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,17 @@ version = "0.1.0"
 description = "A programming language."
 edition = "2018"
 
+[[bin]]
+name = "quench-lsp"
+path = "src/lsp.rs"
+
 [dependencies]
 anyhow = "1"
+lspower = "0.6"
 structopt = "0.3"
+strum = "0.20"
+strum_macros = "0.20"
+tokio = { version = "1", features = ["full"] }
 tree-sitter = "0.17"
 
 [build-dependencies]
