--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -47,17 +47,24 @@
   },
   "scripts": {
     "compile": "tsc -p ./",
-    "lint": "eslint src --ext ts"
+    "lint": "eslint src --ext ts",
+    "pretest": "npm run compile && npm run lint",
+    "test": "node ./out/test/runTest.js"
   },
   "dependencies": {
     "vscode-languageclient": "^7.0.0"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.25",
     "@types/vscode": "^1.53.0",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
-    "typescript": "^4.1.3"
+    "glob": "^7.1.6",
+    "mocha": "^8.3.0",
+    "typescript": "^4.1.3",
+    "vscode-test": "^1.5.1"
   }
 }
