--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,13 @@ path = "src/lsp.rs"
 [dependencies]
 anyhow = "1"
 futures = "0.3"
+im = "15"
 lspower = "0.6"
 salsa = "0.16"
 structopt = "0.3"
 strum = "0.20"
 strum_macros = "0.20"
+thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tree-sitter = "0.17"
 url = "2"
