--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,29 @@ version = "0.1.0"
 description = "A programming language."
 edition = "2018"
 
+[[bin]]
+name = "quench-lsp"
+path = "src/lsp.rs"
+
 [dependencies]
+anyhow = "1"
+futures = "0.3"
+im = "15"
+lspower = "0.6"
+salsa = "0.16"
+slurp = "1"
 structopt = "0.3"
+strum = "0.20"
+strum_macros = "0.20"
+thiserror = "1"
+tokio = { version = "1", features = ["full"] }
+tree-sitter = "0.17"
+url = "2"
+
+[build-dependencies]
+cc = "1"
 
 [dev-dependencies]
-anyhow = "1"
 assert_cmd = "1"
 goldenfile = "1"
+pretty_assertions = "0.7"
