Give the new CI step a name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - uses: Swatinem/rust-cache@v1
+      - name: Get dependencies from cache
+        uses: Swatinem/rust-cache@v1
       - name: Install Tree-sitter CLI
         run: |
           TS_GH=https://github.com/tree-sitter/tree-sitter.git
