Track Tree-sitter generated files in Git again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,22 @@ on:
     branches:
       - main
 jobs:
+  tree-sitter:
+    runs-on: ubuntu-18.04
+    defaults:
+      run:
+        working-directory: tree-sitter-quench
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v2
+      - name: Install dependencies
+        run: npm install
+      - name: Generate Tree-sitter parser
+        run: npx tree-sitter generate
+      - name: Test parser
+        run: npx tree-sitter test
   rust:
     runs-on: ubuntu-18.04
     steps:
@@ -16,10 +32,6 @@ jobs:
           toolchain: stable
       - name: Get dependencies from cache
         uses: Swatinem/rust-cache@v1
-      - name: Install Tree-sitter CLI
-        run: |
-          TS_GH=https://github.com/tree-sitter/tree-sitter.git
-          cargo install --rev 0.18.0 --git $TS_GH tree-sitter-cli
       - name: Run tests
         run: cargo test
       - name: Install
