Try to fix Markdown links by specifying repository

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "version": "0.1.1",
   "publisher": "samestep",
+  "repository": "github:samestep/quench",
   "engines": {
     "vscode": "^1.53.0"
   },
