--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.1"
 authors = ["Sam Estep <sam@samestep.com>"]
 edition = "2018"
 description = "A programming language."
+repository = "https://github.com/samestep/quench"
 license = "MIT"
 categories = [
   "command-line-utilities",
