--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "version": "0.1.2",
   "publisher": "samestep",
-  "repository": "github:samestep/quench",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/samestep/quench.git",
+    "directory": "editors/code"
+  },
   "engines": {
     "vscode": "^1.53.0"
   },
