Check in CI that packaging works (#16)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v2
+      - name: Install dependencies
+        run: npm install
+      - name: Package
+        run: npx vsce package
       - name: Download quench-lsp from previous job
         uses: actions/download-artifact@v2
         with:
@@ -61,9 +67,5 @@ jobs:
         run: |
           chmod +x $GITHUB_WORKSPACE/quench-lsp
           sudo mv $GITHUB_WORKSPACE/quench-lsp /usr/local/bin
-      - name: Install Node
-        uses: actions/setup-node@v2
-      - name: Install dependencies
-        run: npm install
       - name: Run tests
         run: xvfb-run -a npm test
