--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -71,6 +71,7 @@
     "glob": "^7.1.6",
     "mocha": "^8.3.0",
     "typescript": "^4.1.3",
+    "vsce": "^1.87.0",
     "vscode-test": "^1.5.1"
   }
 }
