Publish automatically from releases (#17)

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -53,6 +53,7 @@
   },
   "scripts": {
     "compile": "tsc -p ./",
+    "vscode:prepublish": "npm run compile",
     "lint": "eslint src --ext ts",
     "pretest": "npm run compile && npm run lint",
     "test": "node ./out/test/runTest.js"
