--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Node
         uses: actions/setup-node@v2
+        with:
+          node-version: 15
       - name: Install dependencies
         run: npm install
       - name: Generate Tree-sitter parser
@@ -59,6 +61,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Node
         uses: actions/setup-node@v2
+        with:
+          node-version: 15
       - name: Install dependencies
         run: npm install
       - name: Package
