--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,16 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Node
         uses: actions/setup-node@v2
+        with:
+          node-version: 15
       - name: Install dependencies
         run: npm install
       - name: Generate Tree-sitter parser
         run: npx tree-sitter generate
       - name: Test parser
         run: npx tree-sitter test
+      - name: Ensure empty Git status
+        run: "$GITHUB_WORKSPACE/report_git_status.sh"
   rust:
     runs-on: ubuntu-18.04
     steps:
@@ -44,6 +48,8 @@ jobs:
         with:
           name: quench-lsp
           path: '~/.cargo/bin/quench-lsp'
+      - name: Ensure empty Git status
+        run: "$GITHUB_WORKSPACE/report_git_status.sh"
   vscode:
     needs: rust
     runs-on: ubuntu-18.04
@@ -55,6 +61,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Node
         uses: actions/setup-node@v2
+        with:
+          node-version: 15
       - name: Install dependencies
         run: npm install
       - name: Package
@@ -69,3 +77,5 @@ jobs:
           sudo mv $GITHUB_WORKSPACE/quench-lsp /usr/local/bin
       - name: Run tests
         run: xvfb-run -a npm test
+      - name: Ensure empty Git status
+        run: "$GITHUB_WORKSPACE/report_git_status.sh"
