Correct the key for a VS Code config description

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -44,7 +44,7 @@
             "string"
           ],
           "default": null,
-          "markdownDescription": "Path to quench-lsp executable."
+          "description": "Path to quench-lsp executable."
         },
         "quench.trace.server": {
           "scope": "window",
