--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,23 @@ on:
       - main
 
 jobs:
+  astring:
+    runs-on: ubuntu-20.04
+    defaults:
+      run:
+        working-directory: astring-quench
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 15
+      - name: Install Astring
+        run: npm install
+      - name: Ensure empty Git status
+        run: "$GITHUB_WORKSPACE/report_git_status.sh"
+
   tree-sitter:
     runs-on: ubuntu-20.04
     defaults:
