--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ categories = [
   "development-tools",
 ]
 include = [
+  "/astring-quench/node_modules/astring/LICENSE",
+  "/astring-quench/node_modules/astring/dist/astring.min.js",
   "/build.rs",
   "/LICENSE",
   "/README.md",
@@ -21,10 +23,14 @@ include = [
 
 [dependencies]
 anyhow = "1"
+deno_core = "0.82"
 futures = "0.3"
 im = "15"
 lspower = "0.6"
+rusty_v8 = "0.21"
 salsa = "0.16"
+serde_json = "1"
+serde_v8 = "0.1"
 slurp = "1"
 structopt = "0.3"
 strum = "0.20"
@@ -36,6 +42,7 @@ url = "2"
 
 [build-dependencies]
 cc = "1"
+vergen = "5"
 
 [dev-dependencies]
 assert_cmd = "1"
@@ -43,6 +50,5 @@ comrak = "0.10"
 goldenfile = "1"
 pretty_assertions = "0.7"
 regex = "1"
-serde_json = "1"
 toml = "0.5"
 yaml-rust = "0.4"
