Update the shebang test in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
         run: cargo install --locked --path .
       # partially covered by tests/cli.rs, but this checks the shebang
       - name: Check output of hello example
-        run: examples/hello.qn | git diff --no-index examples/hello.txt -
+        run: examples/hello.qn | git diff --no-index examples/hello.out.txt -
       - name: Upload quench for next job
         uses: actions/upload-artifact@v2
         with:
