--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,23 @@ on:
       - main
 
 jobs:
+  astring:
+    runs-on: ubuntu-20.04
+    defaults:
+      run:
+        working-directory: astring-quench
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 15
+      - name: Install Astring
+        run: npm install
+      - name: Ensure empty Git status
+        run: "$GITHUB_WORKSPACE/report_git_status.sh"
+
   tree-sitter:
     runs-on: ubuntu-20.04
     defaults:
@@ -69,7 +86,7 @@ jobs:
         run: cargo install --locked --path .
       # partially covered by tests/cli.rs, but this checks the shebang
       - name: Check output of hello example
-        run: examples/hello.qn | git diff --no-index examples/hello.txt -
+        run: examples/hello.qn | git diff --no-index examples/hello.out.txt -
       - name: Upload quench for next job
         uses: actions/upload-artifact@v2
         with:
