Consolidate most examples data into a YAML file (#53)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,5 +52,6 @@ goldenfile = "1"
 itertools = "0.10"
 pretty_assertions = "0.7"
 regex = "1"
+serde = "1"
+serde_yaml = "0.8"
 toml = "0.5"
-yaml-rust = "0.4"
