--- a/tests/goldenfiles/examples.yml
+++ b/tests/goldenfiles/examples.yml
@@ -17,7 +17,7 @@ errors:
   compile: |
     0:6 to 0:14 Error: syntax (ERROR (string))
     0:24 to 0:24 Error: syntax (MISSING ";")
-    Error: Failed to parse.
+    Error: Failed to compile.
 
 hello:
   out: |
