--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,9 +16,9 @@ jobs:
           - platform: macos
             label: macos-10.15
             extension: ''
-          - platform: windows
-            label: windows-2019
-            extension: '.exe'
+          # - platform: windows
+          #   label: windows-2019
+          #   extension: '.exe'
     runs-on: ${{ matrix.label }}
     steps:
       - name: Checkout
