Compile to immutable data structures (#63)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,11 @@ categories = [
   "compilers",
 ]
 include = [
-  "/astring-quench/node_modules/astring/LICENSE",
-  "/astring-quench/node_modules/astring/dist/astring.min.js",
   "/build.rs",
+  "/jsdeps/node_modules/astring/dist/astring.min.js",
+  "/jsdeps/node_modules/astring/LICENSE",
+  "/jsdeps/node_modules/immutable/dist/immutable.es.js",
+  "/jsdeps/node_modules/immutable/LICENSE",
   "/LICENSE",
   "/README.md",
   "/src",
