--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,11 @@ on:
     - cron: '0 0 * * 0'
 
 jobs:
-  astring:
+  jsdeps:
     runs-on: ubuntu-20.04
     defaults:
       run:
-        working-directory: astring-quench
+        working-directory: jsdeps
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 15
-      - name: Install Astring
+      - name: Install Node modules
         run: npm install
       - name: Ensure empty Git status
         run: |
