Add even more syntax (#68)

--- a/tests/goldenfiles/examples.yml
+++ b/tests/goldenfiles/examples.yml
@@ -28,6 +28,21 @@ complicated:
 
 data:
   status: 0
+  out: |
+    my_int:
+    4
+    
+    my_list[3]:
+    false
+    
+    my_map.foo:
+    42
+    
+    my_map deep item:
+    10
+    
+    my_nested_map.cat.dog:
+    bird
 
 errors:
   compile: |
@@ -39,3 +54,19 @@ hello:
   status: 0
   out: |
     Hello, world!
+
+numbers:
+  compile: |
+    0:5 to 0:22 Error: number too large to fit in target type
+    1:5 to 1:19 Error: number too small to fit in target type
+    Error: Failed to compile.
+
+pure:
+  status: 0
+
+scope:
+  status: 0
+  out: |
+    bar
+    baz
+    foo
