--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup
       - run: yarn build
-      - run: yarn cli packages/examples/hello.qn
+      - run: yarn cli packages/examples/hello.ms
       - if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./packages/site/dist
-          cname: quench-lang.org
+          cname: moss-lang.org
       - run: .github/report_git_status.sh
 
   format:
