Use .moss file extension instead of .ms

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup
       - run: yarn build
-      - run: yarn cli packages/examples/hello.ms
+      - run: yarn cli packages/examples/hello.moss
       - if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
         with:
