--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -25,7 +25,7 @@
           "moss"
         ],
         "extensions": [
-          ".ms"
+          ".moss"
         ],
         "configuration": "./language-configuration.json"
       }
